# Agentrace

./: .gitignore  README.md  basic_agent.py  index.html  patch.js  patch_total.js  pyproject.toml  server.py  storage.py  test.js
.github/workflows/: ci.yml  deploy-site.yml  publish.yml
agentclaw/: __init__.py  cli.py  client.py  collector.py  decorators.py  server.py  storage.py
agentclaw-npm/: PUBLISHING.md  README.md  package-lock.json  package.json
agentclaw-npm/.github/workflows/: ci.yml  publish.yml
agentclaw-npm/src/: db.js  server.js
agentclaw-npm/src/commands/: traces.js  ui.js
agentclaw-npm/src/ui/: index.html
agentclaw-site/: astro.config.mjs  package-lock.json  package.json
agentclaw-site/src/: og-image.html
agentclaw-site/src/components/: BaseHead.astro
agentclaw-site/src/content/docs/: index.mdx
agentclaw-site/src/content/docs/guides/: dashboard.md  failure-intelligence.md  how-it-works.md  installation.md  quickstart.md
agentclaw-site/src/content/docs/integrations/: crewai.md  langchain.md  ollama.md  openai.md
agentclaw-site/src/pages/: index.astro
agentclaw/integrations/: langchain.py
agentrace/: server.py
agentrace-site/: astro.config.mjs  package-lock.json  package.json
agentrace-site/src/: og-image.html
agentrace-site/src/pages/: 404.astro
agentrace-site/src/styles/: custom.css
examples/: basic_agent.py  dashboard_demo.py
public_ui/: index.html
public_ui/api/: traces_list.json
public_ui/api/traces/: dummy-123.json
scripts/: generate_agentrace_docs_pdf.py
tests/: test_intelligence.py
ui/: index.html
(+6 files in other folders)
